# fastapi-base

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  pyproject.toml
docker/grafana/dashboards/: app-logs.json  datastore-logs.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: loki.yml
docker/loki/: loki-config.yml
docker/promtail/: promtail-config.yml
migrations/: env.py
migrations/versions/: 2026_06_09_1439-98a0c939e97c_init_auth_tables.py  2026_06_10_1014-6419c7741b01_add_course_module.py
src/: __init__.py
src/auth/: constants.py  deps.py  models.py  openapi.py  routers.py  services.py  utils.py
src/auth/dtos/requests/: auth.py
src/auth/dtos/responses/: auth.py
src/common/: models.py  routers.py  services.py
src/common/configs/: logging.py  settings.py
src/common/database/: session.py
src/common/dtos/requests/: pagination.py
src/common/dtos/responses/: success.py
src/common/enums/: message_enum.py
src/common/exceptions/: api_exception.py
src/common/handlers/: exception_handler.py
src/common/middlewares/: log_middleware.py
src/common/redis/: client.py
src/course/: constants.py  enums.py  models.py  openapi.py  routers.py  services.py
src/course/dtos/requests/: course.py
src/course/dtos/responses/: course.py
tests/: conftest.py
tests/auth/: test_auth_flow.py  test_auth_service.py  test_auth_utils.py
tests/common/: test_base_service.py  test_database.py  test_exception_handlers.py  test_health.py  test_redis.py  test_success_response.py
tests/course/: test_course_flow.py  test_course_service.py
