[project]
name = "fastapi-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.136.3",
    "orjson>=3.11.9",
    "psycopg[binary]>=3.3.4",
    "pwdlib[bcrypt]>=0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
