[project]
name = "fastapi-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.136.3",
    "orjson>=3.11.9",
    "psycopg[binary]>=3.3.4",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "testcontainers[postgres,redis]>=4.14.2",
]

[tool.black]
# Pin the target so black doesn't infer py315 from requires-python ">=3.14"
# (its AST safety check can't parse 3.15 output on a 3.14 interpreter).
target-version = ["py314"]
preview = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Deprecation raised inside the testcontainers Redis module, not our code.
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
